tests/blackbox_tests/desktop-entry-syntax-error-4.desktop
# E: syntax-error-in-desktop-entry stray line 4

[Desktop Entry]
Type Application
Name = Gizmo Enhancer
